Fix z-index logo

--- a/styles/partials/_global.scss
+++ b/styles/partials/_global.scss
@@ -54,7 +54,7 @@ a:hover {
 	left: 50%;
 	transform: translateX(-50%);
 	max-width: 226px;
-	z-index: 1000;
+	z-index: 3;
 	background: $page-bg;
 	padding: 10px;
 	.logo-img {
